WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61678
JS API is too aggressive about throwing exceptions for NULL get or set operations
https://bugs.webkit.org/show_bug.cgi?id=61678
Summary
JS API is too aggressive about throwing exceptions for NULL get or set operat...
Geoffrey Garen
Reported
2011-05-27 17:16:40 PDT
JS API is too aggressive about throwing exceptions for NULL get or set operations
Attachments
Patch
(6.27 KB, patch)
2011-05-27 17:19 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-05-27 17:19:50 PDT
Created
attachment 95233
[details]
Patch
Geoffrey Garen
Comment 2
2011-05-27 17:20:25 PDT
<
rdar://problem/9518965
>
WebKit Review Bot
Comment 3
2011-05-27 17:22:48 PDT
Attachment 95233
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/API/JSCallbackObject..." exit_code: 1 Source/JavaScriptCore/API/tests/testapi.c:314: MyObject_set_nullGetForwardSet is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2011-05-27 17:29:00 PDT
Committed
r87588
: <
http://trac.webkit.org/changeset/87588
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug